@@ -5,7 +5,6 @@ import com.clothes.factory.domain.LoginHistoryDto;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class LoginHistoryMapper {
@@ -22,7 +21,7 @@ public class LoginHistoryMapper {
     public List<LoginHistoryDto> mapToLoginHistoryDtoList(final List<LoginHistory> loginHistories) {
         return loginHistories.stream()
                 .map(this::mapToLoginHistoryDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
